--- a/scss/components/_conteiner.scss
+++ b/scss/components/_conteiner.scss
@@ -40,3 +40,9 @@
   
     color: var(--primary-text-color);
   }
+  
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
