--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,5 +7,13 @@
 @import './components/current';
 @import './components/site-nave';
 @import './components/adress-head';
+@import './components/hero-section';
+@import './components/help-section';
+@import './components/advantage-card';
+@import './components/action-photo';
+@import './components/team-section';
+@import './components/team-card';
+
 
  
+
