--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,7 +13,13 @@
 @import './components/action-photo';
 @import './components/team-section';
 @import './components/team-card';
-
-
- 
+@import './components/modal-forms';
+@import './components/form-incide';
+@import './components/check-box';
+@import './components/socsals';
+@import './components/clients';
+@import './components/page-footer';
+@import './components/send-form';
+@import './components/block-photo';
+@import './components/filter-btn'; 
 
