--- a/css/main.css
+++ b/css/main.css
@@ -669,4 +669,538 @@ img {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+}
+
+.modal-wrap {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(47, 48, 58, 0.4);
+  z-index: 999;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms;
+}
+
+.modal-wrap.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-wrap.is-hidden .modal {
+  -webkit-transform: translate(-50%, -50%) scale(1.2);
+          transform: translate(-50%, -50%) scale(1.2);
+}
+
+.modal {
+  max-width: 528px;
+  width: 100%;
+  max-height: 581px;
+  height: 100%;
+  background: var(--primary-white-color);
+  position: relative;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 888;
+  -webkit-transition: -webkit-transform 250ms ease;
+  transition: -webkit-transform 250ms ease;
+  transition: transform 250ms ease;
+  transition: transform 250ms ease, -webkit-transform 250ms ease;
+  padding: 41px 44px 39px 36px;
+}
+.modal__close {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  width: 30px;
+  height: 30px;
+  background: var(--primary-white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+.modal__cross {
+  fill: var(--primary-text-color);
+  position: absolute;
+  right: 8px;
+  top: 8px;
+}
+.modal__discription {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  display: block;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.form:not(:first-child) {
+  display: block;
+}
+
+.form-row {
+  font-size: 12px;
+  line-height: 1.1666;
+  font-weight: 400;
+  letter-spacing: 0.01em;
+}
+.form-row__title:not(:first-child) {
+  margin-top: 10px;
+}
+.form-row__title {
+  display: block;
+  margin-bottom: 4px;
+  margin-top: 10px;
+  color: var(--secondary-text-color);
+}
+.form-row__test {
+  position: relative;
+}
+.form-row__test::after {
+  gap: 12px;
+  background-image: url(../images/icons/cross.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 1px solid var(--accent-color);
+  color: var(--primary-white-color);
+}
+.form-row:not(:last-child) {
+  margin-bottom: 10px;
+}
+.form-row__input {
+  display: block;
+  max-width: 470px;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 41px;
+  outline: none;
+  color: var(--input-color);
+}
+.form-row__input.form-story {
+  min-height: 120px;
+  width: 448px;
+  -webkit-transform: auto;
+          transform: auto;
+  padding: 16px 12px;
+  resize: none;
+}
+.form-row__input::-webkit-input-placeholder {
+  color: var(--secondary-text-color);
+}
+.form-row__input::-moz-placeholder {
+  color: var(--secondary-text-color);
+}
+.form-row__input:-ms-input-placeholder {
+  color: var(--secondary-text-color);
+}
+.form-row__input::-ms-input-placeholder {
+  color: var(--secondary-text-color);
+}
+.form-row__input::placeholder {
+  color: var(--secondary-text-color);
+}
+.form-row__input:focus {
+  border: 1px solid var(--accent-color);
+}
+.form-row__input .icon {
+  padding-right: 12px;
+}
+.form-row__input:focus + svg {
+  fill: var(--accent-color);
+}
+.form-row__svg {
+  position: absolute;
+  top: 20px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 12px;
+  -webkit-transition: fill 0.3s ease-in-out;
+  transition: fill 0.3s ease-in-out;
+}
+
+.privacy {
+  font-size: 14px;
+  line-height: 1.71px;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+  margin-top: 20px;
+  text-align: center;
+}
+.privacy__link {
+  color: var(--accent-color);
+}
+.privacy__label {
+  position: relative;
+}
+.privacy__input {
+  display: none;
+}
+.privacy__label::before {
+  cursor: pointer;
+  display: inline-block;
+  content: "";
+  width: 16px;
+  height: 16px;
+  margin-right: 7px;
+  border: 1px solid var(--bgr-darck-color);
+  border-radius: 2px;
+}
+
+.privacy input:checked + label::before {
+  background-color: var(--accent-color);
+  background-image: url(../images/icons/Vector.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 1px solid var(--accent-color);
+  color: var(--primary-white-color);
+}
+
+.socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 30px;
+}
+.socials__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  fill: var(--icon-color);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.socials__link:hover, .socials__link:focus {
+  background-color: var(--accent-color);
+  fill: var(--primary-white-color);
+}
+
+.clients-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.clients-row__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid var(--icon-color);
+  height: 92px;
+  width: 170px;
+  border-radius: 4px;
+  color: var(--icon-color);
+  background-color: transparent;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients-row__link:hover, .clients-row__link:focus {
+  color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+.clients-row__icon {
+  fill: currentColor;
+}
+.clients-row__icon:hover {
+  fill: var(--accent-color);
+}
+
+.footer {
+  background-color: var(--bgr-darck-color);
+}
+
+.footer__conteiner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  gap: 70px;
+  padding: 60px 0;
+}
+
+.footer__title {
+  font-size: 14px;
+  line-height: 1.1428;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
+  margin-top: 12px;
+}
+
+.footer__logo {
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.footer__logo span {
+  margin-bottom: 20px;
+  color: var(--primary-white-color);
+}
+
+.contacts {
+  max-width: 231px;
+  width: 100%;
+}
+.contacts__adress {
+  display: grid;
+  gap: 9px;
+}
+
+.footer-adress__link {
+  display: inline-block;
+  color: var(--primary-white-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  text-decoration: none;
+  font-style: normal;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-adress__link:hover, .footer-adress__link:focus {
+  color: var(--accent-color);
+}
+
+.contacts-info__link {
+  display: inline-block;
+  color: var(--secondary-white-color);
+  font-weight: 400;
+  line-height: 1.71;
+  text-decoration: none;
+  font-style: normal;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contacts-info__link__link:hover, .contacts-info__link__link:focus {
+  color: var(--accent-color);
+}
+
+.socials__link--footer {
+  fill: var(--primary-white-color);
+}
+
+.footer-social__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.social-item__link--footer {
+  fill: var(--primary-white-color);
+}
+
+.modal-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.modal-form:not(:first-child) {
+  display: block;
+}
+.modal-form:not(:first-child) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.modal-form__input {
+  display: block;
+  max-width: 358px;
+  width: 100%;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  padding: 15px 0 16px 15px;
+  outline: none;
+  color: rgba(255, 255, 255, 0.6);
+  background: none;
+  margin-right: 12px;
+  margin-top: 20px;
+}
+.modal-form__btn {
+  max-width: 200px;
+  max-height: 50px;
+  width: 100%;
+  display: inline-block;
+  border-radius: 4px;
+  padding: 6px 22px;
+  /* text-align: center; */
+  text-align: start;
+  left: 12px;
+  padding: 10px 27px;
+  border: 1px solid transparent;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  position: relative;
+  margin-top: 20px;
+}
+.modal-form__btn:hover, .modal-form__btn:focus {
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-form__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  right: 15%;
+  top: 25%;
+  color: var(--primary-white-color);
+}
+
+.form-mailing {
+  position: relative;
+  display: block;
+  font-size: 12px;
+  line-height: 1.1666;
+  font-weight: 400;
+  letter-spacing: 0.01em;
+  max-width: 570px;
+  width: 100%;
+  max-height: 50px;
+  height: 100%;
+  background: none;
+  -webkit-transition: -webkit-transform 250ms ease;
+  transition: -webkit-transform 250ms ease;
+  transition: transform 250ms ease;
+  transition: transform 250ms ease, -webkit-transform 250ms ease;
+  padding: 0px 0px 0px 0px;
+  margin-left: 39px;
+}
+
+.block-photo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+}
+.block-photo__discription {
+  line-height: 1.88;
+}
+.block-photo__wrap {
+  position: relative;
+  overflow: hidden;
+}
+.block-photo__filling {
+  padding: 20px;
+  border: 1px solid #eeeeee;
+}
+.block-photo__items {
+  position: relative;
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.block-photo__items:hover, .block-photo__items:focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.block-photo__items:hover.discrip-photo {
+  opacity: 1px;
+}
+.block-photo__link {
+  text-decoration: none;
+}
+.block-photo__link:hover .discrip-photo, .block-photo__link:focus .discrip-photo {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.discrip-photo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  /* opacity: 0; */
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  background-color: rgba(33, 150, 243, 0.9);
+  color: var(--primary-white-color);
+  padding: 63px 24px;
+  overflow: auto;
+  -webkit-transition: background-color, -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color, -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color, transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color, transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filter__btn {
+  padding: 6px 22px;
+  border-radius: 4px;
+  line-height: 1.625;
+  font-weight: 500;
+  background-color: var(--bgr-grey-color);
+  cursor: pointer;
+  border: 0ch;
+  -webkit-transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.filter__btn:hover,
+.filter__btn .filter__btn:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }/*# sourceMappingURL=main.css.map */
