--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,4 +22,5 @@
 @import './components/send-form';
 @import './components/block-photo';
 @import './components/filter-btn'; 
+@import './components/buttons'; 
 
