--- a/scss/components/_filter-btn.scss
+++ b/scss/components/_filter-btn.scss
@@ -1,4 +1,15 @@
-.filter__btn {
+.filter {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 50px;
+  color: var(--primary-text-color);
+ line-height: 1.625;
+  font-weight: 500;
+  position: relative;
+  
+
+&__btn {
     padding: 6px 22px;
     border-radius: 4px;
     line-height: 1.625;
@@ -8,10 +19,10 @@
     border: 0ch;
     transition: color , background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
     
- 
+  }
   
-&:hover,
-  .filter__btn:focus {
+ &__btn:hover,
+ &__btn:focus {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
