--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import './components/current';
 @import './components/site-nave';
 @import './components/adress-head';
+@import './components/buttons'; 
 @import './components/hero-section';
 @import './components/help-section';
 @import './components/advantage-card';
@@ -16,11 +17,11 @@
 @import './components/modal-forms';
 @import './components/form-incide';
 @import './components/check-box';
-@import './components/socsals';
+@import './components/socials';
 @import './components/clients';
 @import './components/page-footer';
 @import './components/send-form';
 @import './components/block-photo';
 @import './components/filter-btn'; 
-@import './components/buttons'; 
+
 
