--- a/css/main.css
+++ b/css/main.css
@@ -518,6 +518,74 @@ button {
           align-items: center;
 }
 
+button {
+  color: var(--primary-text-color);
+}
+
+.order-button {
+  height: 50px;
+  width: 216px;
+  font-style: normal;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  min-width: 216px;
+  border-radius: 4px;
+  border: none;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+}
+
+.button-prymary {
+  min-width: 73px;
+  display: inline-block;
+  border-radius: 4px;
+  padding: 6px 22px;
+  text-align: center;
+  border: 1px solid transparent;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  position: absolute;
+}
+
+.send-btn {
+  min-width: 216px;
+  min-height: 50px;
+  display: inline-block;
+  border-radius: 4px;
+  padding: 6px 22px;
+  text-align: center;
+  border: 1px solid transparent;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  position: relative;
+  margin-top: 30px;
+  margin-left: 118px;
+}
+
+.send-btn:hover,
+.send-btn:focus {
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
 .hero-section {
   width: 100%;
   background-image: -webkit-gradient(linear, left bottom, left top, from(var(--start-color)), to(var(--end-color))), url(../images/Img.jpg);
@@ -1021,7 +1089,7 @@ button {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts-info__link__link:hover, .contacts-info__link__link:focus {
+.contacts-info__link:hover, .contacts-info__link:focus {
   color: var(--accent-color);
 }
 
@@ -1075,6 +1143,33 @@ button {
   right: 15%;
   top: 25%;
   color: var(--primary-white-color);
+}
+.modal-form__btn {
+  max-width: 200px;
+  max-height: 50px;
+  width: 100%;
+  display: inline-block;
+  border-radius: 4px;
+  padding: 6px 22px;
+  text-align: start;
+  left: 12px;
+  padding: 10px 27px;
+  border: 1px solid transparent;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  position: relative;
+  margin-top: 20px;
+}
+.modal-form__btn:hover, .modal-form__btn:focus {
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 
 .form-mailing {
@@ -1196,102 +1291,4 @@ button {
   background-color: var(--accent-color);
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-button {
-  color: var(--primary-text-color);
-}
-
-.order-button {
-  height: 50px;
-  width: 216px;
-  font-style: normal;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  cursor: pointer;
-  min-width: 216px;
-  border-radius: 4px;
-  border: none;
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  text-align: center;
-  letter-spacing: 0.06em;
-}
-
-.button-prymary {
-  min-width: 73px;
-  display: inline-block;
-  border-radius: 4px;
-  padding: 6px 22px;
-  text-align: center;
-  border: 1px solid transparent;
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  -webkit-transition-duration: 1s;
-          transition-duration: 1s;
-  position: absolute;
-}
-
-.send-btn {
-  min-width: 216px;
-  min-height: 50px;
-  display: inline-block;
-  border-radius: 4px;
-  padding: 6px 22px;
-  text-align: center;
-  border: 1px solid transparent;
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  -webkit-transition-duration: 1s;
-          transition-duration: 1s;
-  position: relative;
-  margin-top: 30px;
-  margin-left: 118px;
-}
-
-.send-btn:hover,
-.send-btn:focus {
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-}
-
-.modal-form__btn {
-  max-width: 200px;
-  max-height: 50px;
-  width: 100%;
-  display: inline-block;
-  border-radius: 4px;
-  padding: 6px 22px;
-  text-align: start;
-  left: 12px;
-  padding: 10px 27px;
-  border: 1px solid transparent;
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  -webkit-transition-duration: 1s;
-          transition-duration: 1s;
-  position: relative;
-  margin-top: 20px;
-}
-
-.modal-form__btn:hover,
-.modal-form__btn:focus {
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
 }/*# sourceMappingURL=main.css.map */
