--- a/scss/components/_page-footer.scss
+++ b/scss/components/_page-footer.scss
@@ -55,7 +55,8 @@
       color: var(--accent-color);
     }
   }
-  .contacts-info__link {
+  .contacts-info{
+  &__link {
     display: inline-block;
    
     color: var(--secondary-white-color);
@@ -64,7 +65,7 @@
     text-decoration: none;
     font-style: normal;
     transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+  }
   &__link:hover,
   &__link:focus {
     color: var(--accent-color);
